hello2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web2
spec:
  selector:
    app: web2
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30001
  type: NodePort
